--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/btJugar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:backgroundTint="#2D7E6E"
-        android:fontFamily="sans-serif-condensed"
+        android:backgroundTint="#003b71"
+        android:fontFamily="sans-serif-smallcaps"
+        android:hapticFeedbackEnabled="false"
         android:text="Pasaportes"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
@@ -24,14 +25,25 @@
         android:id="@+id/btJugar2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:backgroundTint="#2D7E6E"
-        android:fontFamily="sans-serif-condensed"
+        android:backgroundTint="#003b71"
+        android:fontFamily="sans-serif-smallcaps"
+        android:hapticFeedbackEnabled="true"
         android:text="Facturación"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline18"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
         app:layout_constraintStart_toStartOf="@+id/guideline36"
         app:layout_constraintTop_toTopOf="@+id/guideline38" />
+
+    <TextView
+        android:id="@+id/tvColorDificultad"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#75FFF100"
+        app:layout_constraintBottom_toBottomOf="@+id/spDificultadPasaportes"
+        app:layout_constraintEnd_toStartOf="@+id/guideline102"
+        app:layout_constraintStart_toStartOf="@+id/spDificultadPasaportes"
+        app:layout_constraintTop_toTopOf="@+id/spDificultadPasaportes" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
@@ -113,19 +125,26 @@
         android:id="@+id/spDificultadPasaportes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/guideline12"
+        android:backgroundTint="#003b71"
+        android:backgroundTintMode="add"
+        android:hapticFeedbackEnabled="false"
+        app:layout_constraintBottom_toTopOf="@+id/guideline99"
         app:layout_constraintEnd_toStartOf="@+id/guideline41"
         app:layout_constraintStart_toStartOf="@+id/guideline42"
-        app:layout_constraintTop_toTopOf="@+id/guideline13" />
+        app:layout_constraintTop_toTopOf="@+id/guideline98" />
 
     <Spinner
         android:id="@+id/spDificultadcheckin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/guideline18"
+        android:backgroundTint="#003b71"
+        android:backgroundTintMode="add"
+        android:hapticFeedbackEnabled="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/guideline101"
         app:layout_constraintEnd_toStartOf="@+id/guideline41"
         app:layout_constraintStart_toStartOf="@+id/guideline42"
-        app:layout_constraintTop_toTopOf="@+id/guideline38" />
+        app:layout_constraintTop_toTopOf="@+id/guideline100" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline41"
@@ -139,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.66" />
+        app:layout_constraintGuide_percent="0.65" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline45"
@@ -156,13 +175,6 @@
         app:layout_constraintGuide_percent="0.9085873" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline47"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.094147585" />
-
-    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline48"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -174,8 +186,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline46"
-        app:layout_constraintEnd_toStartOf="@+id/guideline48"
-        app:layout_constraintStart_toStartOf="@+id/guideline47"
+        app:layout_constraintEnd_toStartOf="@+id/guideline42"
+        app:layout_constraintStart_toStartOf="@+id/guideline48"
         app:layout_constraintTop_toTopOf="@+id/guideline45"
         app:srcCompat="@drawable/ajustes" />
 
@@ -184,7 +196,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline46"
-        app:layout_constraintEnd_toStartOf="@+id/guideline41"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline42"
         app:layout_constraintTop_toTopOf="@+id/guideline45"
         app:srcCompat="@drawable/podio" />
@@ -238,5 +250,57 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.04" />
+
+    <ImageView
+        android:id="@+id/ivSalirPrincipal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline46"
+        app:layout_constraintEnd_toStartOf="@+id/guideline48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline45"
+        app:srcCompat="@drawable/exit" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline91"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8490879" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline98"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4828614" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline99"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5186289" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.68256336" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline101"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.71833086" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline102"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.857" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
